namespace java com.thrifttest.thrift

struct TestData {
	1: optional bool b1, 
	2: optional i32 b2, 
	3: optional i64 b3,
	4: optional double b4,
	5: optional string b5,
}
